@@ -8,6 +8,7 @@ import net.ripe.db.whois.common.rpsl.RpslObject;
 import org.apache.commons.compress.utils.Lists;
 import org.springframework.stereotype.Component;
 
+import javax.annotation.Nullable;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -22,24 +23,22 @@ import static net.ripe.db.whois.common.rpki.ValidationStatus.VALID;
 
 @Component
 public class WhoisRoaChecker extends AbstractRpkiRoaChecker {
+
     public WhoisRoaChecker(final RpkiService rpkiService) {
         super(rpkiService);
     }
 
+    @Nullable
     public Map.Entry<Roa, ValidationStatus> validateAndGetInvalidRoa(final RpslObject route){
         /* This method prioritize VALID roas over INVALID roas. So in case of overlap the VALID ROA will se used.
          This is a common behaviour related to roas */
         final Map<Roa, ValidationStatus> roasStatus = validateRoas(route);
-        final Optional<Map.Entry<Roa, ValidationStatus>> roaStatusMap = roasStatus
+        return roasStatus
                 .entrySet()
                 .stream()
                 .filter(getValidOrNotFoundRoas()).findFirst()
-                .or(() -> getInvalidRoas(roasStatus).findFirst());
-
-        if (roaStatusMap.isEmpty()){
-            return null;
-        }
-        return roaStatusMap.get();
+                .or(() -> getInvalidRoas(roasStatus).findFirst())
+                .orElse(null);
     }
 
     @Override
@@ -57,7 +56,7 @@ public class WhoisRoaChecker extends AbstractRpkiRoaChecker {
         if (invalidStatus.isEmpty()){
             return VALID;
         }
-        return invalidStatus.size() == 1 ? invalidStatus.get(0) : INVALID_PREFIX_AND_ORIGIN;
+        return invalidStatus.size() == 1 ? invalidStatus.getFirst() : INVALID_PREFIX_AND_ORIGIN;
     }
 
     private Predicate<Map.Entry<Roa, ValidationStatus>> getValidOrNotFoundRoas() {
